forms-flow-forms/infra/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-forms
  namespace : forms-flow-forms
  labels:
    app.kubernetes.io/name: forms
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forms
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-forms
          image: formsflow/forms-flow-forms:v5.1.0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo '140.82.121.4 github.com ' >> /etc/hosts && echo '140.82.121.9 codeload.github.com' >> /etc/hosts" ]
          stdin: true 
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true 
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
